<resources>
    <string name="app_name">CareLabelsApp</string>
    <string name="read_my_laundry_care_label">READ MY LAUNDRY CARE LABEL</string>
    <string name="icon_width_height">55dp</string>

    <string name="washing_layout">Washing</string>
    <string name="bleaching_layout">Bleaching</string>
    <string name="drying_layout">Drying</string>
    <string name="ironing_layout">Ironing</string>
    <string name="professional_cleaning_layout">Professional Cleaning</string>
    <string name="details">Details</string>

    <string name="choose_your_symbol">Choose your symbol</string>
    <string name="enter_more_details">Tell us more about your clothes</string>

    <string name="next">Next</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="clothes_type">Clothes Type</string>
    <string name="main_material">Main Material</string>
    <string name="special_marks">Special Marks\n</string>
    <string name="add_clothes">Add</string>
    <string name="edit">Edit</string>
    <string name="clothes_season">Clothes Season</string>
    <string name="my_wardrobe">&#160;&#160;&#160;&#160;&#160;MY WARDROBE</string>
    <string name="information_about_laundry_labels">&#160;&#160;&#160;&#160;&#160;INFORMATION ABOUT LABELS</string>
    <string name="color_preview">Color Preview</string>
    <string name="seasonsicon">SeasonsIcon</string>
    <string name="confirm">Confirm</string>
    <string name="nickname">Nickname</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="logout">Logout</string>
    <string name="email_not_verified">Email Not Verified !</string>
    <string name="verify_now">Verify Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="full_name">Full Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="my_profile">My Profile</string>
    <string name="login">Login</string>

    <string name="clothes_string">T-shirt,Sweater,Jacket,Coat,Jeans,Socks,Tracksuit,Vest,Pyjamas,Swimsuit,Skirt,Dress,Blouse,Bra,Panties,Stockings,Suit,Shirt,Tie,Bow-tie,Briefs,Hat,Bag,Mittens,Boxers,Cardigan,Cargo pants,Hoodie,Leggings,Pullover,Scarf,Shawl,Shorts,Sweatpants,Sweatshirt</string>
    <string name="material_string">Cotton,Flax,Wool,Ramie,Silk,Denim,Leather,Down,Fur,Nylon,Polyesters,Spandex,Rubber,Acetate,Cupro,Flannel,Lyocell,Polyvinyl chloride (PVC),Rayon,Recycled Cotton,Recycled PET,Recycled bob,Tyvek,Bamboo,Jute,Hemp</string>


    <string name="colors_string">white,antiqueWhiteColor,oldLaceColor,ivoryColor,seashellColor,ghostWhiteColor,snowColor,linenColor,grayColor,lightGrayColor,whiteGrayColor,black,warmGrayColor,coolGrayColor,charcoalColor,tealColor,steelBlueColor,robinEggColor,pastelBlueColor,turquoiseColor,skyBlueColor,indigoColor,denimColor,blueberryColor,cornflowerColor,babyBlueColor,midnightBlueColor,fadedBlueColor,icebergColor,waveColor,emeraldColor,grassColor,pastelGreenColor,seafoamColor,paleGreenColor,cactusGreenColor,chartreuseColor,hollyGreenColor,oliveColor,oliveDrabColor,moneyGreenColor,honeydewColor,limeColor,cardTableColor,salmonColor,brickRedColor,easterPinkColor,grapefruitColor,pinkColor,indianRedColor,strawberryColor,coralColor,maroonColor,watermelonColor,tomatoColor,pinkLipstickColor,paleRoseColor,crimsonColor,eggplantColor,pastelPurpleColor,palePurpleColor,coolPurpleColor,violetColor,plumColor,lavenderColor,raspberryColor,fuschiaColor,grapeColor,periwinkleColor,orchidColor,goldenrodColor,yellowGreenColor,bananaColor,mustardColor,buttermilkColor,goldColor,creamColor,lightCreamColor,wheatColor,beigeColor,peachColor,burntOrangeColor,pastelOrangeColor,cantaloupeColor,carrotColor,mandarinColor,chiliPowderColor,burntSiennaColor,chocolateColor,coffeeColor,cinnamonColor,almondColor,eggshellColor,sandColor,mudColor,siennaColor,dustColor</string>

    <string name="wash_image_buttons_string">hand_wash,do_not_wash,wash_at_or_below_30,wash_at_or_below_30_mild_fine_wash,wash_at_or_below_30_very_mild_fine_wash,wash_at_or_below_40,wash_at_or_below_40_mild_fine_wash,wash_at_or_below_40_very_mild_fine_wash,wash_at_or_below_50,wash_at_or_below_50_mild_fine_wash,wash_at_or_below_60,wash_at_or_below_60_mild_fine_wash,wash_at_or_below_70,wash_at_or_below_90</string>
    <string name="dry_image_buttons_string">tumble_drying,tumble_drying_low_temps,tumble_drying_normal,do_not_tumble_drying,line_dry,line_dry_in_the_shade,dry_flat,dry_flat_in_the_shade,dry_in_the_shade,drip_dry,drip_dry_in_the_shade</string>
    <string name="bleach_image_buttons_string">chlorine_and_non_chlorine_bleach,bleaching_with_chlorine_allowed,non_chlorine_bleach_when_needed,do_not_bleach,do_not_bleach2</string>
    <string name="iron_image_buttons_string">ironing_at_low_temp,ironing_at_med_temp,ironing_at_high_temp,no_steam,do_not_iron</string>
    <string name="professional_wet_clean_image_buttons_string">professional_wet_cleaning,gentle_wet_cleaning,gentle_cleaning_with_hydrocarbon_solvents,gentle_cleaning_with_pce,very_gentle_wet_cleaning,very_gentle_cleaning_with_hydrocarbon_solvents,very_gentle_cleaning_with_pce,dry_clean_any_solvent,dry_clean_hydrocarbon_solvent_only_hcs,dry_clean_tetrachloroethylene_pce_only,do_not_wet_clean,do_not_dry_clean</string>
    <string name="main_icons_image_buttons_string">iconWashing,iconBleach,iconDrying,iconIroning,iconProfessionalCleaning</string>


    <string name="wash_at_or_below_30">Wash at 30°C or below that temperature, normal mode</string>
    <string name="wash_at_or_below_30_mild_fine_wash">Wash at 30°C or below that temperature, permanent press mode (Permanent Press/Wrinkle resistant)</string>
    <string name="wash_at_or_below_30_very_mild_fine_wash">Wash at 30°C or below that temperature, gentle or delicate mode</string>
    <string name="wash_at_or_below_40">Wash at 40°C or below that temperature</string>
    <string name="wash_at_or_below_40_mild_fine_wash">Wash at 40°C or below that temperature, permanent press mode (Permanent Press/Wrinkle resistant)</string>
    <string name="wash_at_or_below_40_very_mild_fine_wash">Wash at 40°C or below that temperature, gentle or delicate mode</string>
    <string name="wash_at_or_below_50">Wash at 50°C or below that temperature</string>
    <string name="wash_at_or_below_50_mild_fine_wash">Wash at 50°C or below that temperature, permanent press mode (Permanent Press/Wrinkle resistant)</string>
    <string name="wash_at_or_below_60">Wash at 60°C or below that temperature</string>
    <string name="wash_at_or_below_60_mild_fine_wash">Wash at 60°C or below that temperature, permanent press mode (Permanent Press/Wrinkle resistant)</string>
    <string name="wash_at_or_below_70">Wash at 70°C or below that temperature</string>
    <string name="wash_at_or_below_90">Wash at 90°C or below that temperature</string>
    <string name="hand_wash">Hand wash</string>
    <string name="do_not_wash">Do not wash</string>

    <string name="tumble_drying">Tumble drying</string>
    <string name="tumble_drying_low_temps">Tumble drying (low temperature)</string>
    <string name="tumble_drying_normal">Tumble drying (normal)</string>
    <string name="do_not_tumble_drying">Do not tumble dry</string>
    <string name="line_dry">Line dry</string>
    <string name="line_dry_in_the_shade">Line dry in the shade</string>
    <string name="dry_in_the_shade">Dry flat in shade</string>
    <string name="dry_flat">Dry flat</string>
    <string name="dry_flat_in_the_shade">Dry flat in shade</string>
    <string name="drip_dry">Drip dry</string>
    <string name="drip_dry_in_the_shade">Drip dry in shade</string>


    <string name="chlorine_and_non_chlorine_bleach">Bleaching symbol (allowed for both chlorine and non-chlorine bleach)</string>
    <string name="bleaching_with_chlorine_allowed">Bleaching with chlorine allowed (obsolete)</string>
    <string name="non_chlorine_bleach_when_needed">Non-chlorine bleach when needed</string>
    <string name="do_not_bleach">Do not bleach</string>
    <string name="do_not_bleach2">Do not bleach</string>


    <string name="ironing_at_low_temp">Iron at low temperature</string>
    <string name="ironing_at_med_temp">Iron at medium temperature</string>
    <string name="ironing_at_high_temp">Iron at high temperature</string>
    <string name="no_steam">No Steam</string>
    <string name="do_not_iron">Do not iron</string>


    <string name="professional_wet_cleaning">Professional wet cleaning</string>
    <string name="gentle_wet_cleaning">Gentle professional wet cleaning</string>
    <string name="gentle_cleaning_with_hydrocarbon_solvents">Gentle cleaning with hydrocarbon solvents</string>
    <string name="gentle_cleaning_with_pce">Gentle cleaning with PCE</string>
    <string name="very_gentle_wet_cleaning">Very gentle professional wet cleaning</string>
    <string name="very_gentle_cleaning_with_hydrocarbon_solvents">Very gentle cleaning with hydrocarbon solvents</string>
    <string name="very_gentle_cleaning_with_pce">Very gentle cleaning with PCE</string>
    <string name="dry_clean_any_solvent">Dry clean with any solvent</string>
    <string name="dry_clean_hydrocarbon_solvent_only_hcs">Dry clean, hydrocarbon solvent only (HCS)</string>
    <string name="dry_clean_tetrachloroethylene_pce_only">Dry clean, tetrachloroethylene (PCE) only</string>
    <string name="do_not_wet_clean">Do not wet clean</string>
    <string name="do_not_dry_clean">Do not dry clean</string>
    <string name="delete_button">Delete Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="image_of_person">Image of person</string>
    <string name="washing">Washing</string>
    <string name="professional_cleaning">Professional Cleaning</string>
    <string name="bleach">Bleach</string>
    <string name="ironing">Ironing</string>
    <string name="drying">Drying</string>
    <string name="dont_have_clothes">You don\'t have any clothes, try adding one by pressing \"Read My Label\" in main menu</string>

    <string name="prefs_theme_key">theme</string>
    <string name="settings">Settings</string>
    <string name="delete_profile">Delete profile</string>
    <string name="send_activation_email">Send Activation Email</string>
</resources>